# Architecture-Client-Server

./: .clang-format  .editorconfig  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: Config.cmake
cmake/Modules/: FindZMQ.cmake  FindZMQPP.cmake
src/: CMakeLists.txt  simple_client.cpp  simple_server.cpp
src/1_Operations/: client.cpp  server.cpp
src/2_MatrixOps/: README.md  client.cpp  server.cpp
src/3_Chat/: SPECIFICATION.md  SafeQueue.hpp  ServerCodes.hpp  client.cpp  server.cpp
src/Util/: LinearAlgebra.hpp  Matrix.hpp  MsgPackAdaptors.hpp  RVector.hpp  Serializer.hpp  UUID.hpp  ZMQPPAdaptors.hpp  ZMQWrapper.hpp
